[package]
name = "change-proxy"
version = "0.1.0"
edition = "2021"
authors = ["ElFdelCashflow <thibault.oger49@gmail.com>"]
description = "Add, remove and show proxy for differents services"
readme = "README.md"
repository = "https://github.com/ElFidelCashflow/Change-Proxy.git"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.1.1", features = ["derive","cargo"] }
dirs = "4.0.0"
file-owner = "0.1.1"
json = "0.12.4"
sudo = "0.6.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
